<resources>
    <string name="app_name">Carshering</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="error_cant_get_data_toast">Не удалось загрузить данные</string>
    <string name="error_cant_get_route_toast">Не удалось получить маршрут</string>
    <string name="error_missing_permission_toast">Без местоположеня пользователя невозможно построение маршрута</string>
    <string name="car_picture_description">Car picture</string>
    <string name="car_name_tool_text">Renault Arkana</string>
    <string name="remain_range_tool_text">150 км</string>
    <string name="seats_tool_text">5</string>
    <string name="color_tool_text">Красный</string>
    <string name="transmission_tool_text">Автоматическая</string>
    <string name="registration_number_tool_text">A000AA777</string>
    <string name="remain_range_measure">км</string>
    <string name="color_white_ru">Белый</string>
    <string name="color_black_ru">Черный</string>
    <string name="color_red_ru">Красный</string>
    <string name="color_grey_ru">Серый</string>
    <string name="empty_color">\ \</string>
    <string name="transmission_automatic_ru">Автоматическая</string>
    <string name="transmission_manual_ru">Ручная</string>
    <string name="empty_transmission">\ \</string>
</resources>